--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div class="forgot-pass">
                     <a href="#">Forgot your password?</a>
                 </div>
-                <a href="https://ikaros091.github.io/tugas1/">Login</a>
+                <button type="submit" class="btn" href="https://ikaros091.github.io/tugas1/" >log In</button>
+                
                 <div class="signup-link">
                     <a href="#">Signup</a>
                 </div>
