--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h2>Login</h2>
             <form action="#">
                 <div class="input-box">
-                    <input type="email" required>
+                    <input type="text" >
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" required>
+                    <input type="text" >
                     <label>Password</label>
                 </div>
                 <div class="forgot-pass">
