--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="forgot-pass">
                     <a href="#">Forgot your password?</a>
                 </div>
-                <button type="submit" class="btn" href="https://ikaros091.github.io/tugas1/" >log In</button>
+                <a href="https://ikaros091.github.io/tugas1/"><button type="submit" class="btn">log In</button></a>
                 
                 <div class="signup-link">
                     <a href="#">Signup</a>
