--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <div class="forgot-pass">
                     <a href="#">Forgot your password?</a>
                 </div>
-                <a href="https://ikaros091.github.io/tugas1/">
-                    <button type="submit" class="btn">log In</button>
-                </a>
+                <a href="https://ikaros091.github.io/tugas1/"><button type="submit" class="btn">log In</button></a>
                 
                 <div class="signup-link">
                     <a href="#">Signup</a>
