--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
             <h2>Login</h2>
             <form action="#">
                 <div class="input-box">
-                    <input type="text" >
+                    <input type="email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" >
+                    <input type="password" required>
                     <label>Password</label>
                 </div>
                 <div class="forgot-pass">
                     <a href="#">Forgot your password?</a>
                 </div>
-                <a href="https://ikaros091.github.io/tugas1/"><button type="submit" class="btn">log In</button></a>
-                
+                <button type="submit" class="btn"><a href="https://ikaros091.github.io/tugas1/">log in</a></button>
                 <div class="signup-link">
                     <a href="#">Signup</a>
                 </div>
